# FreeRTOS-From-Ground-Up

./: CMakeLists.txt  README.md  main.cpp
001_TaskCreation/: CMakeLists.txt  main.cpp
003_TaskParameters/: CMakeLists.txt  main.cpp
004_TaskPriorities/: CMakeLists.txt  main.cpp
004_TaskPriorities/FreeRTOSSettings/: CMakeLists.txt
004_TaskPriorities/Settings/: FreeRTOSConfig.h
005_ChangingTaskPrioritiesInRealTime/: CMakeLists.txt  main.cpp
005_ChangingTaskPrioritiesInRealTime/FreeRTOSSettings/: CMakeLists.txt  FreeRTOSConfig.h
011_ExecutingTasksPeriodically/: CMakeLists.txt  FreeRTOSHooks.c  main.cpp
011_ExecutingTasksPeriodically/FreeRTOSSettings/: FreeRTOSConfig.h  FreeRTOSHooks.c
013_IdleTask/: CMakeLists.txt  main.cpp
013_IdleTask/FreeRTOSSettings/: FreeRTOSConfig.h
014_WorkingWithQueues/: CMakeLists.txt  main.cpp
015_SyncingWithQueues/: CMakeLists.txt  main.cpp
016_WorkingWithQueueSets/: CMakeLists.txt  main.cpp
016_WorkingWithQueueSets/FreeRTOSSettings/: FreeRTOSConfig.h  FreeRtosDynamicMemory.c
024.5_TimerPendFunctionCall/: CMakeLists.txt  main.cpp
024.5_TimerPendFunctionCall/FreeRTOSSettings/: FreeRTOSConfig.h
024_StoppingTheTimer/: CMakeLists.txt  main.cpp
024_StoppingTheTimer/FreeRTOSSettings/: CMakeLists.txt  FreeRTOSHooks.c
030_SyncingTasksWithEventGroups/: CMakeLists.txt  main.cpp
030_SyncingTasksWithEventGroups/FreeRTOSSettings/: FreeRTOSConfig.h
